Fixed height on mobile

--- a/css/homepage/h2h-fasttalk-preview.css
+++ b/css/homepage/h2h-fasttalk-preview.css
@@ -87,6 +87,11 @@
 
     .greenPreview-imgWrapper {
         height: auto;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .greenPreview-img {
+        height: auto;
+        object-fit: contain;
     }
 }
